# restapi-c-sqlite

./: .gitignore  CMakeLists.txt  README.md  manage.sh
scripts/: test_api.sh
src/: CMakeLists.txt  main.c
src/core/: CMakeLists.txt  todo.c  todo.h
src/db/: CMakeLists.txt  database.c  database.h
src/http/: CMakeLists.txt  handlers.c  handlers.h  server.c  server.h
tests/: CMakeLists.txt  test_api.sh  test_todo.c
